<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">uptrain</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_100_kilomets">100 kilomets</string>
  <string name="msg_b_n_ch_a_c_t_i">Bạn chưa có tài khoản?</string>
  <string name="lbl_t_i_ng_v_i">Tôi đồng ý với</string>
  <string name="msg_ng_nh_p_n">Đăng nhập / Đăng ký tài khoản UpTrain ngay bây giờ</string>
  <string name="lbl_ch_y_g_n_y">Chạy gần đây</string>
  <string name="msg_ch_o_user_b_n">Chào user
Bạn đã sẳn sàng để chạy bộ chưa?</string>
  <string name="lbl_v">và</string>
  <string name="lbl2">&#128207;</string>
  <string name="msg_th_ng_tin_t_i_k">Thông tin tài khoản</string>
  <string name="lbl_th_i_gian">Thời gian</string>
  <string name="lbl_100">100</string>
  <string name="lbl_qu_n_m_t_kh_u">Quên mật khẩu?</string>
  <string name="lbl_ng_k">Đăng ký</string>
  <string name="msg_ng_nh_p_googl">Đăng nhập Google</string>
  <string name="lbl_c_i_t">Cài đặt</string>
  <string name="lbl_45h31">45h31</string>
  <string name="lbl_t_ng_th_i_gian">Tổng thời gian</string>
  <string name="lbl_email2">Email:</string>
  <string name="lbl_10_km">10 km</string>
  <string name="lbl_25_02_2024">25/02/2024</string>
  <string name="lbl_10_000_b_c">10,000 bước</string>
  <string name="lbl_minh_hieu">Minh Hieu</string>
  <string name="lbl_c_n_n_ng">Cân nặng</string>
  <string name="lbl_ng_k2">Đăng kí</string>
  <string name="lbl_quy_n_ri_ng_t">Quyền riêng tư</string>
  <string name="msg_ch_nh_s_ch_b_o">Chính sách bảo mật</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </string>
  <string name="lbl_160_lbs">160 lbs</string>
  <string name="msg_s_d_m_so_v_i_t">Số dặm so với thời gian</string>
  <string name="msg_i_u_kho_n_uptr">Điều khoản UpTrain</string>
  <string name="msg_trung_t_m_h_tr">Trung tâm hỗ trợ</string>
  <string name="msg_duy_tr_s_c_kh">Duy trì sức khỏe cùng UpTrain!</string>
  <string name="lbl">&#128095;</string>
  <string name="msg_ng_nh_p_faceb">Đăng nhập Facebook</string>
  <string name="lbl_ng_i_ch_y">Người chạy</string>
  <string name="lbl_50_000_b_c">50,000 bước</string>
  <string name="lbl_1_4_km_h">1.4 km/h</string>
  <string name="lbl_trang_c_nh_n">Trang cá nhân</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_ng_n_ng">Ngôn ngữ</string>
  <string name="msg_i_u_kho_n_d_ch">Điều khoản dịch vụ</string>
  <string name="msg_k_t_n_i_v_ng">Kết nối và ứng dụng</string>
  <string name="msg_c_i_t_v_th_n">Cài đặt và thông báo</string>
  <string name="lbl_ng_xu_t">Đăng xuất</string>
  <string name="lbl_tu_i">Tuổi</string>
  <string name="lbl_ho_c">Hoặc</string>
  <string name="lbl_ng_nh_p">Đăng nhập</string>
  <string name="lbl_th_ng_b_o">Thông báo</string>
  <string name="lbl_c_nh_n">Cá nhân</string>
  <string name="msg_ch_nh_s_a_trang">Chỉnh sửa trang cá nhân</string>
  <string name="lbl_qu_ng_ng">Quãng đường</string>
  <string name="lbl_s_d_m_ch_y">Số dặm đã chạy</string>
  <string name="msg_ng_nh_p_t_i_k">Đăng nhập tài khoản</string>
  <string name="lbl_s_b_c">Số bước</string>
  <string name="lbl_m_t_kh_u2">Mật khẩu:</string>
  <string name="lbl_trang_ch">Trang chủ</string>
  <string name="lbl_2_kilomets">2 kilomets</string>
  <string name="lbl_s_b_c_h_m_nay">Số bước hôm nay</string>
  <string name="lbl_30">30</string>
  <string name="msg_ng_nh_p_v_b">Đăng nhập và bảo mật</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_s_d_m">Số dặm</string>
  <string name="lbl_20_00_12_03">20:00 12/03</string>
  <string name="msg_t_c_trung_b">Tốc độ trung bình</string>
  <string name="lbl_m_t_kh_u">Mật khẩu</string>
  <string name="lbl_s_b_c_i">Số bước đã đi</string>
  <string name="msg_t_nh_tr_ng_s_c">Tình trạng sức khỏe</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
