<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerVM" type="com.uptrain.app.modules.register.data.viewmodel.RegisterVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegister"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlogoutone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleindigo_701">
                <ImageView android:id="@+id/imageLogoutOne"
                    android:layout_height="@dimen/_31pxh"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_logout1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logout1"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNgk"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_138pxh"
                    android:layout_marginStart="@dimen/_101pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_weight="0.78"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtNgk}"
                    style="@style/txtPoppinsmedium20" tools:text="@string/lbl_ng_k"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_10"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etGroupTwentyThree"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etGroupTwentyThreeValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_10"
            android:ellipsize="end" android:hint="@string/lbl_m_t_kh_u"
            android:id="@+id/etGroupTwentyTwo" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etGroupTwentyTwoValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_10"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etGroupTwentyOne"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etGroupTwentyOneValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <LinearLayout android:id="@+id/linearRowtnhtrngsc"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_1">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTnhtrngsc"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_weight="0.9" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtTnhtrngsc}"
                style="@style/txtPoppinsmedium14" tools:text="@string/msg_t_nh_tr_ng_s_c"/>
            <ImageView android:id="@+id/imageImageSeven"
                android:layout_height="@dimen/_15pxh"
                android:layout_marginBottom="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_141pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="@dimen/_15pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_image7"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image7"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStacktingvi"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_49pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_253pxv" android:layout_width="@dimen/_229pxh">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTingvi"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtTingvi}"
                style="@style/txtPoppinssemibold12" tools:text="@string/lbl_t_i_ng_v_i"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtIukhondch"
                android:layout_gravity="top|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtIukhondch}"
                style="@style/txtPoppinssemibold12_1" tools:text="@string/msg_i_u_kho_n_d_ch"/>
            <LinearLayout android:id="@+id/linearRowv"
                android:layout_gravity="bottom|end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_36pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end" android:id="@+id/txtV"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.12"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtV}"
                    style="@style/txtPoppinssemibold12" tools:text="@string/lbl_v"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtChnhschbo"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.88"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtChnhschbo}"
                    style="@style/txtPoppinssemibold12_1" tools:text="@string/msg_ch_nh_s_ch_b_o"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageImageNine"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_32pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_25pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_image9"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image9"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnngK"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_ng_k" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_ng_k"/>
    </LinearLayout>
</layout>
