<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginWithAccountVM" type="com.uptrain.app.modules.loginwithaccount.data.viewmodel.LoginWithAccountVM"/>
    </data>
    <FrameLayout android:id="@+id/frameLoginwithacco"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnthirtythree"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <FrameLayout android:gravity="start"
                android:id="@+id/frameStackduytrsckh"
                android:layout_height="@dimen/_204pxv" android:layout_width="match_parent">
                <FrameLayout android:id="@+id/frameStackthirtythree"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_196pxv"
                    android:layout_marginBottom="@dimen/_8pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageThirtyThree"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_196pxh"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_33_196x360}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_33_196x360"/>
                    <ImageView android:id="@+id/imageImageEleven"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_marginBottom="@dimen/_21pxv"
                        android:layout_marginEnd="@dimen/_19pxh"
                        android:layout_marginStart="@dimen/_19pxh"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_image11"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_image11"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtDuytrsckh"
                    android:layout_gravity="bottom|end"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_56pxh"
                    android:layout_marginStart="@dimen/_56pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{loginWithAccountVM.loginWithAccountModel.txtDuytrsckh}"
                    style="@style/txtInterregular16" tools:text="@string/msg_duy_tr_s_c_kh"/>
            </FrameLayout>
            <TextView android:ellipsize="end" android:gravity="end"
                android:id="@+id/txtNgnhpn"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{loginWithAccountVM.loginWithAccountModel.txtNgnhpn}"
                style="@style/txtInterregular12" tools:text="@string/msg_ng_nh_p_n"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_black_900_7f_radius_5"
                android:ellipsize="end"
                android:hint="@string/lbl_email2"
                android:id="@+id/etGroupEight"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_82pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_11pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@={loginWithAccountVM.loginWithAccountModel.etGroupEightValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_black_900_7f_radius_5"
                android:ellipsize="end"
                android:hint="@string/lbl_m_t_kh_u2"
                android:id="@+id/etGroupSeven" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_11pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={loginWithAccountVM.loginWithAccountModel.etGroupSevenValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtQunmtkhu"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginWithAccountVM.loginWithAccountModel.txtQunmtkhu}"
                style="@style/txtPoppinsmediumitalic10" tools:text="@string/lbl_qu_n_m_t_kh_u"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnngNhp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_ng_nh_p"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_ng_nh_p"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlinefifteen"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View android:background="@color/black_900_7f"
                    android:id="@+id/lineLineFifteen"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_weight="0.45" android:layout_width="0dp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHoc"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_weight="0.09"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginWithAccountVM.loginWithAccountModel.txtHoc}"
                    style="@style/txtInterregular10_1" tools:text="@string/lbl_ho_c"/>
                <View android:background="@color/black_900_7f"
                    android:id="@+id/lineLineSixteen"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_weight="0.46" android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowngnhpfaceb"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleindigo_701cornerRadius">
                <ImageView android:id="@+id/imageImageFive"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image2"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNgnhpFaceb"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginEnd="@dimen/_51pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_weight="0.88"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginWithAccountVM.loginWithAccountModel.txtNgnhpFaceb}"
                    style="@style/txtPoppinsmedium14_1" tools:text="@string/msg_ng_nh_p_faceb"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowngnhpgoogl"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleindigo_701cornerRadius">
                <ImageView android:id="@+id/imageImageSix"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image3"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image3"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNgnhpGoogl"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_69pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_weight="0.87"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginWithAccountVM.loginWithAccountModel.txtNgnhpGoogl}"
                    style="@style/txtPoppinsmedium14_1" tools:text="@string/msg_ng_nh_p_googl"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
